<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Metadata. -->
    <string name="app_name">Detection</string>
    <string name="app_bar_name">Breast Cancer Detection</string>

    <string name="title_consultation">Consultation</string>
    <string name="title_diagnosis">Diagnosis</string>
    <string name="title_home">Home</string>
    <string name="title_notification">Notification</string>
    <string name="title_profile">Profile</string>

    <!-- Common Strings. -->
    <string name="form_prompt">Please fill this form to continue</string>
    <string name="form_name_hint">Name</string>
    <string name="form_address_hint">Address</string>
    <string name="form_history_hint">Medical History</string>
    <string name="form_date_hint">Date</string>
    <string name="form_concern_hint">The Concern</string>

    <string name="form_empty">This field is required</string>
    <string name="form_submitted">Form successfully submitted</string>
    <string name="form_type">Type</string>

    <string name="mtrl_picker_date_header_unselected" tools:override="true">Date</string>
    <string name="mtrl_picker_text_input_date_hint" tools:override="true">Consultation Date</string>

    <string name="name_invalid">Invalid name</string>
    <string name="network_failed">An error has occurred, please try again later</string>

    <!-- Authentication Strings. -->
    <string name="auth_prompt">Login to continue</string>
    <string name="auth_title">Welcome to Breast Cancer Detection</string>

    <string name="button_login">Login</string>
    <string name="button_log_out">Log out</string>
    <string name="button_register">Register</string>

    <string name="email_exist">Email exist</string>
    <string name="email_hint">Email</string>
    <string name="email_invalid">Invalid Email</string>

    <string name="login_title">Log into Breast Cancer Detection</string>
    <string name="login_email_invalid">Incorrect Email</string>
    <string name="login_password_invalid">Incorrect password</string>

    <string name="password_hint">Password</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="password_not_matched">Password not matched</string>
    <string name="password_weak">Password too weak</string>

    <string name="register_title">Create an account</string>
    <string name="register_name_hint">Full name</string>

    <!-- Image content descriptions for accessibility. -->
    <string name="article_image_description">Article image</string>
    <string name="auth_image_description">People in this together image</string>
    <string name="author_image_description">Author image</string>
    <string name="diagnosis_image_description">Menu image</string>
    <string name="diagnosis_mammography_image_description">Mammography image</string>
    <string name="navigate_description">Go into this option</string>
    <string name="profile_image_description">Profile image</string>
    <string name="notification_image_description">Notification status icon</string>

    <!-- Main Strings. -->
    <string name="consultation_form_button_hint">Consult</string>
    <string name="diagnosis_form_button_hint">Schedule Diagnosis</string>

    <string name="diagnosis_mammography">Mammography</string>
    <string name="diagnosis_mammography_description">Breast cancer examination using low energy X-rays</string>

    <string name="notification_caught_up">All caught up!</string>

    <!-- Admin Strings. -->
    <string name="consultation_accept">Accept</string>
    <string name="consultation_deny">Deny</string>
    <string name="consultation_accepted">Accepted</string>
    <string name="consultation_denied">Denied</string>

    <string name="diagnose">Diagnose</string>
    <string name="diagnosis_loading_hint">Please wait while we\'re processing the mammography</string>
    <string name="diagnosis_upload_title">Mammography for %s</string>
    <string name="diagnosis_upload_image_hint">Image format: PNG</string>
    <string name="diagnosis_upload_add_image">+ Upload Mammography</string>
    <string name="diagnosis_upload_add_image_hint">Or click the pictures to upload the mammography</string>
    <string name="diagnosis_upload_button">Upload</string>
    <string name="diagnosis_upload_spinner_hint">View</string>

    <string name="diagnosis_result_benign">Benign: %s</string>
    <string name="diagnosis_result_malignant">Malignant: %s</string>

    <string name="warn_image_not_selected">Please select an image first</string>
    <string name="warn_image_not_supported">Image is not supported</string>
    <string name="warn_view_not_selected">Please select a view first</string>

    <string-array name="diagnosis_view">
        <item>L-CC</item>
        <item>L-MLO</item>
        <item>R-CC</item>
        <item>R-MLO</item>
    </string-array>
</resources>